Fixed Headers and Jump Links

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ li{
 /*NAVBAR*/
 .bg-dark{
 	background-color: rgba(0, 0, 0, 1) !important;
+	top: 0;
+  	left: 0;
+  	text-align: center;
+  	color: white;
+  	width: 100%;
 }
 
 
@@ -137,31 +142,19 @@ li{
 	margin-top: 15px;
 	text-align: center;
 	padding: 15px;
-}
-#about .social-menus a{
-	transition: 0.2s;
-}
+}	 
+#about .social-menus a{transition: 0.2s;}
+#about .social-menus .linkedin{color: #17a2b8;}
+#about .social-menus .github{color: #000;}
+#about .social-menus .instagram{color: #8a3ab9;}
 
-#about .social-menus .linkedin{
-	color: #17a2b8;
-}
-
-#about .social-menus .github{
-	color: #000;
-}
-
-#about .social-menus .instagram{
-	color: #8a3ab9;
-}
-/*works*/
-#works{
-	background-color: #fff;
-}
-
+/*WORKS*/
+#works{background-color: #fff;}
 #works .works-title{
 	text-align: center;
 	font-family: 'Josefin Sans', sans-serif;
-	padding: 50px;
+	padding-top: 6rem;
+	padding-bottom: 3rem;
 	color: #17a2b8;
 }
 
@@ -171,13 +164,8 @@ li{
 	transition: 0.2s;
 }
 
-#works .card img{
-	height: 210px;
-}
-
-#works .col-md-4{
-	margin-bottom: 45px;
-}
+#works .card img{height: 210px;}
+#works .col-md-4{margin-bottom: 45px;}
 
 
 /*referances*/
@@ -191,19 +179,13 @@ li{
 #referances .referances-title{
 	text-align: center;
 	font-family: 'Josefin Sans', sans-serif;
-	padding: 40px;
+	padding-top: 6rem;
+	padding-bottom: 3rem;
 	color: #fff;
 }
 
-#referances .card-body{
-	color: #fff;
-	text-align: center;
-}
-
-#referances .col-md-4{
-	margin-top: 20px;
-}
-
+#referances .card-body{color: #fff; text-align: center;}
+#referances .col-md-4{margin-top: 20px;}
 #referances .col h3{
 	color:#fff;
 	font-size: 40px;
@@ -212,9 +194,7 @@ li{
 	font-family: 'Josefin Sans', sans-serif;
 }
 
-#referances img{
-	width: 40%;
-}
+#referances img{width: 40%;}
 
 /*HOBBIES*/
 
@@ -223,10 +203,7 @@ li{
 	padding-bottom: 70px;
 }
 
-#hobbies .row{
-	padding: 20px;
-}
-
+#hobbies .row{padding: 20px;}
 #hobbies .col-4 a{font-family: 'Inter', sans-serif !important;}
 
 #hobbies .title-hobbies{
@@ -255,15 +232,9 @@ li{
 
 #contact p{color:#fff;}
 #contact h4{color:#17a2b8;}
-#contact h3{color:#17a2b8; font-family: 'Domine', serif;}
-#contact .py-4 a{
-	padding: 20px;
-	color:#fff;
-}
-
-#contact .py-4 a:hover{
-	color:#17a2b8;
-}
+#contact h3{color:#17a2b8; font-family: 'Domine', serif; padding-top: 6rem; padding-bottom: 3rem;}
+#contact .py-4 a{padding: 20px;color:#fff;}
+#contact .py-4 a:hover{color:#17a2b8;}
 
 #contact .input-group-addon{
 	padding: 10px;
